# clutch

./: .gitignore  README.md
.github/workflows/: docker-image.yml  monolith-deploy.yml  oauth2-docker-image.yml
backend/: Cargo.toml  Dockerfile  docker_command.txt
backend/auth-service/: Cargo.toml  Dockerfile  build.rs
backend/auth-service/proto/user/: userservice.proto
backend/auth-service/src/: auth.rs  discord.rs  grpc.rs  grpc_user.rs  main.rs  models.rs
backend/cdn-service/: Cargo.toml  Dockerfile
backend/cdn-service/src/: cdn.rs  main.rs  models.rs
backend/easter-egg/: Cargo.toml  Dockerfile
backend/easter-egg/src/: easter_egg.rs  main.rs
backend/entity/: Cargo.toml
backend/entity/src/: file_reference.rs  group.rs  group_invite.rs  group_user.rs  lib.rs  role.rs  role_permission.rs  tag.rs  user.rs  user_role.rs
backend/excl-api/: Cargo.toml
backend/excl-api/src/: authz.rs  cdn.rs  file.rs  group.rs  main.rs  middleware.rs  models.rs  oauth2.rs  resource.rs  shared.rs  storage.rs  user.rs
backend/group-service/: Cargo.toml  Dockerfile
backend/group-service/src/: group.rs  main.rs  middleware.rs  models.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_file_reference_table.rs  m20220101_000001_create_group_table.rs  m20220101_000001_create_group_user_table.rs  m20220101_000001_create_resource_table.rs  m20220101_000001_create_resource_tag_table.rs  m20220101_000001_create_user_table.rs  m20220728_000001_create_file_reference_table.rs  m20220728_000001_create_group_table.rs  m20220728_000001_create_group_user_table.rs  m20220728_000001_create_resource_table.rs  m20220728_000001_create_resource_tag_table.rs  m20220728_000001_create_role_permission_table.rs  m20220728_000001_create_role_table.rs  m20220728_000001_create_user_role_table.rs  m20220728_000001_create_user_table.rs  m20220801_000001_create_group_invite_table.rs
backend/monolith/: Cargo.toml  Dockerfile
backend/monolith/src/: cdn.rs  group.rs  jwt.rs  main.rs  oauth2.rs  persistence.rs  resource.rs  search.rs  storage.rs
backend/oauth2-service/: Cargo.toml  Dockerfile
backend/oauth2-service/src/: jwt.rs  main.rs  models.rs  oauth2.rs
backend/resource-service/: Cargo.toml  Dockerfile
backend/resource-service/src/: group.rs  main.rs  models.rs  resource.rs
backend/search-service/: Cargo.toml  Dockerfile
backend/search-service/src/: jwt.rs  main.rs  middleware.rs  models.rs  search.rs
backend/sql-migration/monolith-sql/: Cargo.toml  Dockerfile
backend/sql-migration/monolith-sql/entity/src/: file_reference.rs  resource.rs  user.rs
backend/sql-migration/monolith-sql/migration/src/: lib.rs  m20220101_000001_create_file_reference_table.rs  m20220101_000001_create_resource_table.rs
backend/sql-migration/monolith-sql/src/: errors.rs  main.rs  models.rs
backend/sql-migration/monolith-sql/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/sql-migration/monolith-sql/src/handler/: auth.rs  cdn.rs  easter_egg.rs  group.rs  mod.rs  resource.rs  user.rs
backend/sql-migration/monolith-sql/src/service/: group.rs  hashing.rs  mod.rs  resource.rs  user.rs
backend/sql-migration/resource-service-sql/: Cargo.toml
backend/sql-migration/resource-service-sql/entity/: Cargo.toml
backend/sql-migration/resource-service-sql/entity/src/: file_reference.rs  group.rs  lib.rs  resource.rs  tag.rs  user.rs
backend/sql-migration/resource-service-sql/migration/: Cargo.toml
backend/sql-migration/resource-service-sql/migration/src/: lib.rs  m20220101_000001_create_file_reference_table.rs  m20220101_000001_create_resource_table.rs  m20220101_000001_create_resource_tag_table.rs
backend/sql-migration/resource-service-sql/src/: errors.rs  main.rs  models.rs  resource.rs
backend/sql-migration/resource-service-sql/src/service/: mod.rs  resource.rs
backend/src/: authz.rs  cdn.rs  errors.rs  file.rs  group.rs  jwt.rs  main.rs  middleware.rs  models.rs  oauth2.rs  resource.rs  search.rs  shared.rs  storage.rs  user.rs
backend/src/auth/: jwt.rs  middleware.rs  principal.rs
backend/src/handler/: auth.rs  cdn.rs  group.rs  mod.rs  resource.rs  search.rs  user.rs
backend/src/service/: group.rs  hashing.rs  id.rs  mod.rs  resource.rs  role.rs  storage.rs  user.rs
backend/user-service/: Cargo.toml  Dockerfile  build.rs
backend/user-service/proto/auth/: authservice.proto
backend/user-service/src/: group.rs  grpc.rs  main.rs  middleware.rs  models.rs  user.rs
discord-bot/: Cargo.toml
discord-bot/entity/src/: group.rs
discord-bot/migration/src/: m20220101_000001_create_group_table.rs
discord-bot/src/: bot.rs  cdn.rs  main.rs  persistence.rs  resource.rs  search.rs  storage.rs  type_maps.rs
discord-bot/src/commands/: mod.rs  resource.rs  search.rs
discord-bot/src/service/: group.rs  jwt.rs  mod.rs  storage.rs  url_generation.rs  user.rs
docs/: CNAME  resource-service.md
docs/backend/: user-service.md
frontend/: gradient.txt  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/app/: FileRender.jsx  GroupName.tsx  GroupNavigation.jsx  GroupNavigation.tsx  GroupTitle.tsx  Header.tsx  HeaderBar.tsx  LoadingResourceCard.tsx  Members.tsx  NewButton.tsx  ResourceCard.tsx  UserName.tsx  members.tsx
frontend/components/index/: features.tsx  pricing.tsx
frontend/pages/: 404.js  _app.tsx  ads.txt.tsx  app.tsx  beta.js  index.tsx  login.jsx  login.tsx  register.tsx  sign-up.jsx  sign-up.tsx  signin.tsx  signup.tsx
frontend/pages/api/: invite  login.ts  logout.ts
frontend/pages/app/: index.tsx  join.tsx
frontend/pages/app/create/: index.jsx
frontend/pages/app/group/: [id].tsx  index.tsx
frontend/pages/discord/create/: index.jsx
frontend/pages/legal/: privacy-policy.jsx
frontend/public/: sitemap.txt
frontend/src/pages/: index.tsx
frontend/styles/: custom.nprogress.css  globals.css  index.module.css  newResource.module.css
resources/Adobe Files/: social banner.ai
server/: Cargo.toml
server/src/: main.rs  models.rs  persistence.rs  resource.rs
(+20 files in other folders)
