[package]
name = "excl-bot"
version = "0.1.0"
description = "Discord bot for interacting with examclutch.com"
authors =["Kavika Palletenne <kbpalletenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
meilisearch-sdk = "0.15"
rust-s3 = "0.31"
anyhow  = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
