[package]
name = "excl-bot"
version = "0.1.0"
description = "Discord bot for interacting with examclutch.com"
authors =["Kavika Palletenne <kbpalletenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
entity = { path = "entity" }
migration = { path = "migration" }

# Runtime
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }

# Discord API
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }

# Database
sea-orm = { version = "0.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }

# Id
rs-snowflake = "0.6"
nanoid = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }

# Search
meilisearch-sdk = "0.15"

# File upload/download
rust-s3 = "0.31"

# Other dependencies
anyhow  = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
jsonwebtoken = "8"
cookie = "0.16"
