[package]
name = "examclutch-server"
authors = ["Kavika Palletenne"]
version = "0.1.0"
edition = "2018"
description = "ExamClutch is a study note discovery and aggregation site allowing everyone to study together."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.0.2", default-features = false, features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
bson = { version = "2.0.1", features = ["chrono-0_4", "uuid-0_8"] }
dotenv ="0.15"
clap = { version = "3.0.0-beta.5", features = ["color"] }
anyhow = "1.0.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
