[package]
name = "auth-service"
version = "0.1.0"
description = "AuthZ/N service for ExamClutch.com"
authors = ["Kavika Palletenne <kbpalletenne@gmail.com>", "ExamClutch.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# gRPC
tonic = { version = "0.7" }
prost = "0.10"

# Http Server
actix-web = { version = "4.0", features = [] }

# Other dependencies
awc = "2.0"
meilisearch-sdk = "0.15"
jsonwebtoken = "8.1"
actix-cors = "0.6"
cookie = "0.16"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.7"
