[package]
name = "cdn-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Http server
actix-web = { version = "4.0" }

# Other dependencies
mongodb = { version = "2.0", default-features = false, features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
meilisearch-sdk = "0.15"
nanoid = "0.4"
bson = { version = "2.0", features = ["chrono-0_4", "uuid-0_8"] }
jsonwebtoken = "8.1"
actix-cors = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
rust-s3 = "0.31"
tokio-stream = "0.1"
