[package]
name = "easter-egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Http server
actix-web = { version = "4.0" }

# Other dependencies
anyhow = "1.0"
