[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.20"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm]
version = "^0.9"
features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres"
]
