[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sea-orm-migration = { version = "0.9", default-features = false, features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
entity = { path = "../entity" }
