[package]
name = "oauth2-service"
version = "0.1.0"
edition = "2021"
authors = ["Kavika Palletenne", "ExamClutch.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"] }
url = { version = "2.2.2", features = ["serde"] }
anyhow = "1.0.51"
form_urlencoded = "1.0.1"
dotenv ="0.15"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.0.1", features = ["chrono-0_4", "uuid-0_8"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
jsonwebtoken = "^7.2.0"
rustls = "0.18.0"
