[package]
name = "search-service"
version = "0.1.0"
description = "Search service for ExamClutch.com"
authors = ["Kavika Palletenne <kbpalletenne@gmail.com>", "ExamClutch.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0", features = [] }
meilisearch-sdk = "0.15"
jsonwebtoken = "8.1"
actix-cors = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
