[package]
name = "search-service"
version = "0.1.0"
description = "Search service for ExamClutch.com"
authors = ["Kavika Palletenne <kbpalletenne@gmail.com>", "ExamClutch.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0", features = [] }
meilisearch-sdk = "0.15"
mongodb = { version = "2.2", default-features = false, features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
jsonwebtoken = "8.1"
actix-cors = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
