[package]
name = "user-service"
version = "0.1.0"
edition = "2021"
authors = ["Kavika Palletenne", "ExamClutch.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
yup-oauth2 = "6.1.0"
anyhow = "1.0.51"
dotenv ="0.15"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.0.2", default-features = false, features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
bson = { version = "2.0.1", features = ["chrono-0_4", "uuid-0_8"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
