[package]
name = "user-service"
description = "User service for ExamClutch.com"
authors = ["Kavika Palletenne <kbpalletenne@gmail.com>", "ExamClutch.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# gRPC
tonic = { version = "0.7" }
prost = "0.10"

# Http server
actix-web = { version = "4.0" }

# Other dependencies
mongodb = { version = "2.0", default-features = false, features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
bson = { version = "2.0.1", features = ["chrono-0_4", "uuid-0_8"] }
jsonwebtoken = "8.1"
actix-cors = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }


[build-dependencies]
tonic-build = "0.7"
