[package]
name = "resource-service-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
entity = { path = "entity" }
migration = { path = "migration" }

# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Http server
actix-web = { version = "4.0" }
actix-cors = "0.6"
env_logger = "0.9"

# Database
sea-orm = { version = "0.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Hashing
rust-argon2 = "1.0"

# Other dependencies
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
thiserror = "1.0"
